이메일 수정

--- a/lens/templates/lens/profile_update.html
+++ b/lens/templates/lens/profile_update.html
@@ -10,11 +10,12 @@
     </div>
     {% endif %}
 
-    <form action="" method="post" enctype="multipart/form-data">{% csrf_token %}
-    {{ user_form.as_p }}
-    {{ profile_form.as_p }}
-    <input type="submit" value="Update" />
+    <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        {{ user_form.as_p }}
+        {{ profile_form.as_p }}
+        <input type="submit" value="Update" />
     </form>
-</p>
+
 
 {% endblock %}
